# quickcheck-higherorder

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  quickcheck-higherorder.cabal
.github/workflows/: haskell-ci.yml
src/Test/QuickCheck/: HigherOrder.hs
src/Test/QuickCheck/HigherOrder/: Constructible.hs  Function.hs  TestEq.hs  Testable.hs
src/Test/QuickCheck/HigherOrder/Function/: CoArbitrary.hs  Pretty.hs  Shrink.hs  Types.hs
src/Test/QuickCheck/HigherOrder/Internal/: Constructible.hs  Function.hs  TestEq.hs  Testable.hs
src/Test/QuickCheck/HigherOrder/Internal/Testable/: Class.hs
src/Test/QuickCheck/HigherOrder/Testable/: Class.hs
test/: sample.hs  test.hs
