name:                quickcheck-higherorder
version:             0.1.0.0
synopsis:            Higher-order-friendly extension of QuickCheck
description:
  See README.
homepage:            https://github.com/Lysxia/quickcheck-higherorder#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2018 Li-yao Xia
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Test.QuickCheck.HigherOrder
    Test.QuickCheck.HigherOrder.Constructible
    Test.QuickCheck.HigherOrder.Function
    Test.QuickCheck.HigherOrder.Testable
    Test.QuickCheck.HigherOrder.Testable.Class
    Test.QuickCheck.HigherOrder.TestEq
  build-depends:
    QuickCheck,
    base >= 4.9 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite qcho-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: test.hs
  build-depends:
    QuickCheck,
    quickcheck-higherorder,
    tasty,
    tasty-hunit,
    base
  ghc-options: -Wall
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lysxia/quickcheck-higherorder
