name:                quickcheck-higherorder
version:             0.1.0.0
synopsis:            QuickCheck extension for higher-order properties
description:
  See README.
homepage:            https://github.com/Lysxia/quickcheck-higherorder#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2020 Li-yao Xia
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Test.QuickCheck.HigherOrder
    Test.QuickCheck.HigherOrder.Internal.Constructible
    Test.QuickCheck.HigherOrder.Internal.Function
    Test.QuickCheck.HigherOrder.Internal.Testable
    Test.QuickCheck.HigherOrder.Internal.Testable.Class
    Test.QuickCheck.HigherOrder.Internal.TestEq
  build-depends:
    QuickCheck,
    test-fun,
    base >= 4.9 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite qcho-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: test.hs
  build-depends:
    quickcheck-higherorder,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    base
  ghc-options: -Wall
  default-language: Haskell2010

test-suite qcho-sample
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: sample.hs
  build-depends:
    QuickCheck,
    quickcheck-higherorder,
    test-fun,
    base
  ghc-options: -Wall
  default-language: Haskell2010
  if !flag(sample)
    buildable: False

flag sample
  default: False
  manual: True

source-repository head
  type:     git
  location: https://github.com/Lysxia/quickcheck-higherorder
